With Mobile Responsive

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <a href=""><img src="logos/Daraz.pk Logo.svg" alt=""></a>
     <a href=""><img src="logos/Amazon.svg" alt=""></a>
     <a href=""><img src="logos/Ebay.svg" alt=""></a>
-    <a href=""><img src="logos/Walmart.svg" alt=""></a>
+    <a href="" ><img src="logos/Walmart.svg" alt=""></a>
     <a href=""><img src="logos/Alibaba.svg" alt=""></a>
     <a href=""><img src="logos/Rakuten.svg" alt=""></a>
     <a href=""><img src="logos/Target.svg" alt=""></a>
@@ -221,8 +221,8 @@
     <input type="email" name="" id="subscribeinput" placeholder="Enter your email here">
     <button class="subscribe"><a href="#">Subscribe</a> </button>
 </div>
-<div class="img">
-    <img src="images/gear.png" alt="">
+<div class="">
+    <img src="images/gear.png" alt="" class="lastimg">
 </div>
 
 </section>
