--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Influencer</title>
+    <title>Influencer Products</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/f67f0d7804.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@500&family=Rubik&family=Spline+Sans&display=swap" rel="stylesheet">
+<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 </head>
 <body>
     <!-- Header Section -->
@@ -39,8 +40,8 @@
 
 <!-- Section 2 Start-->
 <section class="section2">
-    <a href=""><img src="logos/Daraz.pk Logo.svg" alt=""></a>
     <a href=""><img src="logos/Amazon.svg" alt=""></a>
+    <a href=""><img src="logos/Daraz.pk Logo.svg" alt=""></a>
     <a href=""><img src="logos/Ebay.svg" alt=""></a>
     <a href="" ><img src="logos/Walmart.svg" alt=""></a>
     <a href=""><img src="logos/Alibaba.svg" alt=""></a>
